--- a/client/shared/top-nav-bar/top-nav-bar.html
+++ b/client/shared/top-nav-bar/top-nav-bar.html
@@ -16,6 +16,14 @@
                     </div>
                 </form>
             </div>
+
+            <div class="col m3 hide-on-small-only">
+                <div class="right">
+                    <span id="en" class="pointer flag-icon flag-icon-us"></span>
+                    <span id="ua" class="pointer flag-icon flag-icon-ua"></span>
+                    <span id="ru" class="pointer flag-icon flag-icon-ru"></span>
+                </div>
+            </div>
         </div>
     </nav>
 
