--- a/client/shared/top-nav-bar/top-nav-bar.html
+++ b/client/shared/top-nav-bar/top-nav-bar.html
@@ -8,7 +8,7 @@
             </div>
 
             <div class="col s10 m6 no-padding">
-                <form>
+                <form class="search-form">
                     <div class="input-field">
                         <input id="search" type="search" required>
                         <label for="search"><i class="material-icons">search</i></label>
