--- a/client/shared/top-nav-bar/top-nav-bar.html
+++ b/client/shared/top-nav-bar/top-nav-bar.html
@@ -58,5 +58,16 @@
         <li><a class="info" id="about">{{_ "about"}}</a></li>
         <li><a class="info" id="authors-info">{{_ "authorsInformation"}}</a></li>
         <li><a class="info" id="customer-info">{{_ "customerInformation"}}</a></li>
+
+        <div class="hide-on-large-only">
+            <li class="divider"></li>
+            <li>
+                <a class="info" id="bucket">{{_ "bucket"}}</a>
+            </li>
+
+            <li>
+                <a class="info" id="userOrdersList">{{_ "orders"}}</a>
+            </li>
+        </div>
     </ul>
 </template>
