--- a/client/shared/top-nav-bar/top-nav-bar.html
+++ b/client/shared/top-nav-bar/top-nav-bar.html
@@ -27,7 +27,9 @@
 
             <div class="col s2 l1">
                 <div class="right">
-                    {{> loginButtons align="right"}}
+                    <div>
+                        {{> loginButtons align="right"}}
+                    </div>
                 </div>
             </div>
         </div>
