--- a/client/shared/top-nav-bar/side-menu/side-menu.html
+++ b/client/shared/top-nav-bar/side-menu/side-menu.html
@@ -31,18 +31,16 @@
         <li><a class="info" id="authors-info">{{_ "authorsInformation"}}</a></li>
         <li><a class="info" id="customer-info">{{_ "customerInformation"}}</a></li>
 
-        <div class="hide-on-large-only">
-            <li class="divider"></li>
-            <li>
-                <a class="info" id="bucket">{{_ "bucket"}}</a>
-            </li>
+        <li class="divider"></li>
+        <li>
+            <a class="info" id="bucket">{{_ "bucket"}}</a>
+        </li>
 
-            {{#if currentUser}}
-                <li>
-                    <a class="info" id="userOrdersList">{{_ "orders"}}</a>
-                </li>
-            {{/if}}
-        </div>
+        {{#if currentUser}}
+            <li>
+                <a class="orders">{{_ "orders"}}</a>
+            </li>
+        {{/if}}
 
         {{#if isAdmin}}
             <li class="divider"></li>
