--- a/client/shared/top-nav-bar/top-nav-bar.html
+++ b/client/shared/top-nav-bar/top-nav-bar.html
@@ -1,34 +1,36 @@
 <template name="topNavBar">
     <nav>
-        <div class="row">
-            <div class="col s2 m3">
-                <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i
-                        class="mdi-navigation-menu"></i></a>
-                <a href="#" class="brand-logo hide-on-med-and-down">Logo</a>
-            </div>
-
-            <div class="col s8 m5 l6 no-padding">
-                <form class="search-form">
-                    <div class="input-field">
-                        <input id="search" type="search" required>
-                        <label for="search"><i class="material-icons">search</i></label>
-                        <i class="material-icons">close</i>
-                    </div>
-                </form>
-            </div>
-
-            <div class="col m2 hide-on-small-only">
-                <div class="center-align">
-                    <span id="en" class="pointer flag-icon flag-icon-us"></span>
-                    <span id="ua" class="pointer flag-icon flag-icon-ua"></span>
-                    <span id="ru" class="pointer flag-icon flag-icon-ru"></span>
+        <div class="nav-wrapper">
+            <div class="row">
+                <div class="col s2 m3">
+                    <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i
+                            class="mdi-navigation-menu"></i></a>
+                    <a href="#" class="brand-logo hide-on-med-and-down">Logo</a>
                 </div>
-            </div>
 
-            <div class="col s2 l1">
-                <div class="right">
-                    <div>
-                        {{> loginButtons align="right"}}
+                <div class="col s8 m5 l6 no-padding">
+                    <form class="search-form">
+                        <div class="input-field">
+                            <input id="search" type="search" value="{{searchString}}">
+                            <label for="search"><i class="material-icons">search</i></label>
+                            <i class="material-icons">close</i>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="col m2 hide-on-small-only">
+                    <div class="center-align">
+                        <span id="en" class="pointer flag-icon flag-icon-us"></span>
+                        <span id="ua" class="pointer flag-icon flag-icon-ua"></span>
+                        <span id="ru" class="pointer flag-icon flag-icon-ru"></span>
+                    </div>
+                </div>
+
+                <div class="col s2 l1">
+                    <div class="right">
+                        <div>
+                            {{> loginButtons align="right"}}
+                        </div>
                     </div>
                 </div>
             </div>
