close modal window after image will be uploaded to server

--- a/client/shared/attach-chech-modal/attach-check-modal.html
+++ b/client/shared/attach-chech-modal/attach-check-modal.html
@@ -18,7 +18,7 @@
 
         </div>
         <div class="modal-footer">
-            <a class="confirm modal-action modal-close waves-effect waves-green btn-flat">{{_ "attach"}}</a>
+            <a class="confirm  waves-effect waves-green btn-flat">{{_ "attach"}}</a>
         </div>
     </div>
 </template>
